# spinshot-client-python

./: README.md  pyproject.toml
src/spinshot/: category.py  cli.py  client.py  image.py  model.py  product.py  resource.py  restapiclient.py  variant.py
src/spinshot/model/: base.py  category.py  image.py  product.py  variant.py
src/spinshot/resource/: base.py  category.py  image.py  product.py  variant.py
