[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spinshot"]

[project]
name = "spinshot-client"
version = "0.0.1"
authors = [
    { name = "Christian Thieme", email = "christian@spinshot.io" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'requests == 2.31.0',
]

[project.urls]
Homepage = "https://bitbucket.org/spinshot/spinshot-python-client.git"
Issues = ""

[project.scripts]
spinshot = "spinshot.cli:main_cli"

